[GTK] System font scaling not applied to 'font-size: XXXpt' https://bugs.webkit.org/show_bug.cgi?id=218450

Reviewed by Žan Doberšek.

Apply the text scale factor as WebPageProxy text zoom factor, instead of changing the default font size in
settings that only applies to default fonts and it was incorrectly calculated.

* UIProcess/API/glib/WebKitSettings.cpp:
(webKitSettingsDispose):
(webKitSettingsConstructed):
* UIProcess/API/glib/WebKitWebView.cpp:
(webkitWebViewConstructed):
(webkitWebViewDispose):
(webkit_web_view_set_zoom_level):
(webkit_web_view_get_zoom_level):

Canonical link: https://commits.webkit.org/232919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271354 268f45cc-cd09-0410-ab3c-d52691b4dbfc